Resposive for small phones

--- a/index.html
+++ b/index.html
@@ -15,89 +15,235 @@
 
     <title>Frontend Mentor | Product list with cart</title>
   </head>
-  <body>
-    <div class="p-16 grid grid-cols-4">
-      <div class="col-span-3 col-start-1">
-        <h1>Desserts</h1>
+  <body class="font-body">
+    <div class="py-6 px-4 bg-rose-50">
+      <div class="">
+        <h1 class="text-3xl font-bold mb-6">Desserts</h1>
 
-        <div class="grid grid-cols-3">
-          <div>
-            <div>
-              <img src="assets/images/image-waffle-desktop.jpg" alt="waffle" />
-              <p>Add to Cart</p>
+        <div class="">
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-waffle-mobile.jpg"
+                alt="Waffle"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
             </div>
-            <p>Waffle</p>
-            <h2>Waffle with Berries</h2>
-            <p>6.50</p>
+            <p class="item">Waffle</p>
+            <h2 class="item-name">Waffle with Berries</h2>
+            <p class="price">$6.50</p>
           </div>
 
-          <div>
-            <p>Crème Brûlée</p>
-            <h2>Vanilla Bean Crème Brûlée</h2>
-            <p>7.00</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-creme-brulee-mobile.jpg"
+                alt="Crème brulee"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Crème Brûlée</p>
+            <h2 class="item-name">Vanilla Bean Crème Brûlée</h2>
+            <p class="price">$7.00</p>
           </div>
 
-          <div>
-            <p>Macaron</p>
-            <h2>Macaron Mix of Five</h2>
-            <p>8.00</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-macaron-mobile.jpg"
+                alt="Macaron"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Macaron</p>
+            <h2 class="item-name">Macaron Mix of Five</h2>
+            <p class="price">$8.00</p>
           </div>
 
-          <div>
-            <p>Tiramisu</p>
-            <h2>Classic Tiramisu</h2>
-            <p>5.50</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="mb-6">
+              <img
+                src="assets/images/image-tiramisu-mobile.jpg"
+                alt="Tiramisu"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Tiramisu</p>
+            <h2 class="item-name">Classic Tiramisu</h2>
+            <p class="price">$5.50</p>
           </div>
 
-          <div>
-            <p>Baklava</p>
-            <h2>Pistachio Baklava</h2>
-            <p>4.00</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-baklava-mobile.jpg"
+                alt="Baklava"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Baklava</p>
+            <h2 class="item-name">Pistachio Baklava</h2>
+            <p class="price">$4.00</p>
           </div>
 
-          <div>
-            <p>Pie</p>
-            <h2>Lemon Meringue Pie</h2>
-            <p>5.00</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-meringue-mobile.jpg"
+                alt="Pie"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Pie</p>
+            <h2 class="item-name">Lemon Meringue Pie</h2>
+            <p class="price">$5.00</p>
           </div>
 
-          <div>
-            <p>Cake</p>
-            <h2>Red Velvet Cake</h2>
-            <p>4.50</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-cake-mobile.jpg"
+                alt="Cake"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Cake</p>
+            <h2 class="item-name">Red Velvet Cake</h2>
+            <p class="price">$4.50</p>
           </div>
 
-          <div>
-            <p>Brownie</p>
-            <h2>Salted Caramel Brownie</h2>
-            <p>4.50</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="relative mb-6">
+              <img
+                src="assets/images/image-brownie-mobile.jpg"
+                alt="Brownie"
+                class="rounded-full"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Brownie</p>
+            <h2 class="item-name">Salted Caramel Brownie</h2>
+            <p class="price">$4.50</p>
           </div>
 
-          <div>
-            <p>Panna Cotta</p>
-            <h1>Vanilla Panna Cotta</h1>
-            <p>6.50</p>
-            <p>Add to Cart</p>
+          <div class="mb-8">
+            <div class="mb-6">
+              <img
+                src="assets/images/image-panna-cotta-mobile.jpg"
+                alt="Panna Cotta"
+                class="rounded-lg"
+              />
+              <div class="add-to-cart">
+                <span>
+                  <img
+                    src="assets/images/icon-add-to-cart.svg"
+                    alt="add to cart icon"
+                  />
+                </span>
+                <p class="text-sm font-semibold">Add to Cart</p>
+              </div>
+            </div>
+            <p class="item">Panna Cotta</p>
+            <h2 class="item-name">Vanilla Panna Cotta</h2>
+            <p class="price">$6.50</p>
           </div>
         </div>
       </div>
 
-      <div class="col-start-4">
-        <p>Your Cart (<!-- Quantity -->)</p>
-        <p>Your added items will appear here</p>
+      <div class="bg-white rounded-lg p-4">
+        <p class="text-2xl text-primary-red font-bold mb-12">
+          Your Cart (<!-- Quantity -->)
+        </p>
+
+        <div>
+          <img
+            src="assets/images/illustration-empty-cart.svg"
+            alt="Empty cart"
+            class="mx-auto mb-6"
+          />
+        </div>
+        <p class="text-sm text-secondary-500 font-semibold text-center">
+          Your added items will appear here
+        </p>
       </div>
     </div>
-    <div class="attribution">
+    <div
+      class="text-xs text-secondary-500 bg-secondary-50 text-center font-medium"
+    >
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">delight</a>.
     </div>
   </body>
 </html>
